<menu xmlns:android="http://schemas.android.com/apk/res/android">
  <group android:checkableBehavior="single">
    <item
        android:id="@+id/navigation_item_1"
        android:checked="true"
        android:icon="@drawable/ic_action_grade"
        android:title="@string/navigation_item_1"/>
    <item
        android:id="@+id/navigation_item_2"
        android:icon="@drawable/ic_action_grade"
        android:title="@string/navigation_item_2"/>
  </group>
  <item
      android:id="@+id/navigation_subheader"
      android:title="@string/navigation_subheader">
    <menu>
      <item
          android:id="@+id/navigation_sub_item_1"
          android:icon="@drawable/ic_action_grade"
          android:title="@string/navigation_sub_item_1"/>
      <item
          android:id="@+id/navigation_sub_item_2"
          android:icon="@drawable/ic_action_grade"
          android:title="@string/navigation_sub_item_2"/>
    </menu>
  </item>
</menu>